--- a/frameworks/yui-test/logger.css
+++ b/frameworks/yui-test/logger.css
@@ -9,7 +9,7 @@ version: 2.7.0
 /* default font-size 77% */
 body {margin-top:1em,padding:0}
 pre {font-family:Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;}
-.yui-log {padding:0;padding-bottom:2em;width:31em;background-color:#CCC;color:#000;border:1px solid #AAA;-moz-border-radius:5px;border-radius:5px;font-family:Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;font-size:12px;text-align:left;z-index:9000;background:-webkit-gradient(linear,0% 0%,0% 20%,from(#CCC),to(#AAA));background:-moz-linear-gradient(30% 30% 90deg,#AAA,#CCC)}
+.yui-log {padding:0;padding-bottom:2em;width:31em;background-color:#CCC;color:#000;border:1px solid #AAA;-moz-border-radius:5px;border-radius:5px;font-family:Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;font-size:12px;text-align:left;z-index:9000;background:-webkit-gradient(linear,0% 0%,0% 10%,from(#eee),to(#ccc));background:-moz-linear-gradient(10% 10% 90deg,#ccc,#eee)}
 
 /* for containers built from scratch */
 .yui-log-container {margin:auto;}
@@ -29,7 +29,7 @@ pre {font-family:Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu San
 
 /* body */
 
-.yui-log .yui-log-bd {width:100%;display:block;background-color:#FFF;border:0px 0px 1px 1px solid #AAA;overflow:auto;line-height:18px;} /* height is controlled here: default 20em*/
+.yui-log .yui-log-bd {width:100%;display:block;background-color:#FFF;border:0px 0px 1px 1px solid #AAA;overflow:auto;line-height:18px;border-top:1px solid #999;border-bottom:1px solid #999} /* height is controlled here: default 20em*/
 .yui-log p {margin:1px;padding:.1em;padding-top:2px}
 .yui-log pre {margin:0;padding:0;padding-top:2px;padding-left:5px;}
 
@@ -47,7 +47,7 @@ pre {font-family:Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu San
 }
 
 /* footer */
-.yui-log .yui-log-ft {width:88%;margin-top:1.7em;margin-left:.5em}
+.yui-log .yui-log-ft {width:88%;margin-top:1.7em;margin-left:.5em;}
 .yui-log .yui-log-ft .yui-log-categoryfilters {}
 .yui-log .yui-log-ft .yui-log-sourcefilters {width:100%;border-top:1px solid #575757;margin-top:.75em;padding-top:.75em;}
 .yui-log .yui-log-filtergrp {margin-right:.5em;}
@@ -55,13 +55,13 @@ pre {font-family:Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu San
 .yui-log .yui-log-ft li {list-style:none;display:inline;white-space:nowrap;}*/
 
 /* logs */
-.yui-log .info {background-color:#85d237;color:white;padding:2px;border-radius:2px;-moz-border-radius:2px;border: 1px solid green} /* green */
-.yui-log .warn {background-color:#dfca09;color:white;padding:2px;-moz-border-radius:2px;border-radius:2px;border: 1px solid #baa400} /* yellow */
-.yui-log .error {background-color:#d23737;color:white;padding:2px;border-radius:2px;-moz-border-radius:2px;border: 1px solid #851d00} /* red */
-.yui-log .time {background-color:#379fd2;color:white;padding:2px;border-radius:2px;-moz-border-radius:2px;border: 1px solid blue} /* blue */
-.yui-log .window {background-color:#be008a;color:white;padding:2px;border-radius:2px;-moz-border-radius:2px;border: 1px solid purple} /* magenta */
-.yui-log .pass {padding:2px;-moz-border-radius:2px;border-radius:2px;}
-.yui-log .fail {padding:2px;-moz-border-radius:2px;border-radius:2px;}
+.yui-log .info {background-color:#85d237;color:white;padding:2px;border-radius:3px;-moz-border-radius:3px;border: 1px solid green} /* green */
+.yui-log .warn {background-color:#dfca09;color:white;padding:2px;-moz-border-radius:3px;border-radius:3px;border: 1px solid #baa400} /* yellow */
+.yui-log .error {background-color:#d23737;color:white;padding:2px;border-radius:3px;-moz-border-radius:3px;border: 1px solid #851d00} /* red */
+.yui-log .time {background-color:#379fd2;color:white;padding:2px;border-radius:3px;-moz-border-radius:3px;border: 1px solid blue} /* blue */
+.yui-log .window {background-color:#be008a;color:white;padding:2px;border-radius:3px;-moz-border-radius:3px;border: 1px solid purple} /* magenta */
+.yui-log .pass {padding:2px;-moz-border-radius:3px;border-radius:3px;}
+.yui-log .fail {padding:2px;-moz-border-radius:3px;border-radius:3px;}
 .yui-log input {margin-right:5px;}
-.yui-log label {padding:2px;border-radius:2px;text-transform:uppercase}
+.yui-log label {padding:2px;border-radius:3px;text-transform:uppercase}
 .yui-log .yui-log-bd pre p {padding-bottom:5px;}
