--- a/frameworks/yui-test/testlogger.css
+++ b/frameworks/yui-test/testlogger.css
@@ -4,4 +4,4 @@ Code licensed under the BSD License:
 http://developer.yahoo.net/yui/license.txt
 version: 2.7.0
 */
-.yui-log{padding-top:3em;}.yui-log-container{width:40em;}.yui-log .yui-log-bd{height:60em;}.yui-log .yui-log-btns{display:none;}.yui-log .yui-log-ft .yui-log-sourcefilters{visibility:hidden;}.yui-log .yui-log-hd{display:none;}.yui-log .yui-log-ft{position:absolute;top:0;}.pass{background-color:#fff;font-weight:bold;color:black;border:1px solid #999}.fail{background-color:black;font-weight:bold;color:white;border:1px solid #666}.ignore{background-color:#666;font-weight:bold;color:white;border:1px solid:#222}
+.yui-log{padding-top:3em;}.yui-log-container{width:40em;}.yui-log .yui-log-bd{height:60em;}.yui-log .yui-log-btns{display:none;}.yui-log .yui-log-ft .yui-log-sourcefilters{visibility:hidden;}.yui-log .yui-log-hd{display:none;}.yui-log .yui-log-ft{position:absolute;top:0;}.pass{background-color:#fff;font-weight:bold;color:black;border:1px solid #999}.fail{background-color:black;font-weight:bold;color:red;border:1px solid #aaa}.ignore{background-color:#666;font-weight:bold;color:white;border:1px solid:#222}
