--- a/examples/styles.css
+++ b/examples/styles.css
@@ -89,7 +89,6 @@ body, html, textarea {
 }
 
 #composer .input textarea {
-  font-size: 14px;
   position: relative;
   height: 100%;
   width: 100%;
@@ -184,15 +183,16 @@ body, html, textarea {
   overflow: auto;
 }
 
-#console .stanzas pre {
+#console .stanzas .xml {
   font-family:Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;
   font-size: 12px;
   padding: 5px;
   margin: 0px;
+  word-wrap: break-word;
   border-bottom: 1px solid #ccc;
 }
 
-#console .stanzas pre:nth-child(even) {
+#console .stanzas .xml:nth-child(even) {
   background-color: #eee;
 }
 
@@ -221,7 +221,7 @@ body, html, textarea {
   background:-moz-linear-gradient(45% 45% 90deg,rgb(58, 58, 58),rgb(114, 114, 114));
 }
 
-.options button {
+.options button, .dialog input[type="submit"], .dialog button {
   color: white;
   background: rgb(58, 58, 58);
   background:-webkit-gradient(linear,0% 0%,0% 45%,from(rgb(144, 144, 144)),to(rgb(58, 58, 58)));
@@ -254,7 +254,7 @@ body, html, textarea {
   width: 100%;
 }
 
-.popup {
+.popup, .dialog {
   opacity: 0;
   position: absolute;
   color: white;
@@ -293,7 +293,7 @@ td {
   padding: 5px;
 }
 
-tr:nth-child(even) {
+.popup tr:nth-child(even) {
   background-color: #eee;
 }
 
@@ -320,7 +320,7 @@ tr:nth-child(even) {
   bottom: 15px;
 }
 
-button {
+button, input[type='submit'] {
   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -335,7 +335,7 @@ button {
   height: 25px;
 }
 
-button:active {
+button:active, input[type='submit']:active {
   color: #fff;
   background: rgb(34, 34, 34);
   background:-webkit-gradient(linear,0% 0%,0% 45%,from(rgb(34, 34, 34)),to(rgb(78, 78, 78)));
@@ -343,7 +343,8 @@ button:active {
   border: 1px solid #999;
 }
 
-textarea {
+textarea, input {
+  font-size: 14px;
   resize: none;
   outline: none;
   border-radius: 3px;
@@ -351,4 +352,42 @@ textarea {
   -webkit-border-radius: 3px;
   border: 1px solid #999;
   background-color: #fff;
+}
+
+#login {
+  background: rgba(0,0,0,0.5);
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  z-index: 100;
+}
+
+#login .dialog {
+  opacity: 1;
+  margin: 0px auto;
+  position: relative;
+  top: 200px;
+  width: 300px;
+}
+
+.dialog input[type='submit'] {
+  float: right;
+  clear: both;
+  display: block;
+}
+
+#error {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  background: #D23737;
+  background:-webkit-gradient(linear,0% 0%,0% 45%,from(#D23737),to(#A60014));
+  background:-moz-linear-gradient(45% 45% 90deg,#A60014,#D23737);
+  border-bottom: 1px solid #80000F;
+  color: white;
+  z-index: 100;
+  padding: 10px;
 }
