--- a/examples/styles.css
+++ b/examples/styles.css
@@ -4,6 +4,11 @@ body, html, textarea {
   overflow: hidden;
 }
 
+select, option {
+  position:relative;
+  z-index: 5;
+}
+
 #header { 
   position: fixed;
   left: 0px;
@@ -15,6 +20,16 @@ body, html, textarea {
   background:-moz-linear-gradient(45% 45% 90deg,#ccc,#eee);
   text-shadow: #eee 1px 1px 0px;
   padding: 12px;
+}
+
+#title {
+  display: block;
+  width: 100%;
+  margin: 0px auto;
+  text-align: center;
+  position: absolute;
+  top: 12px;
+  z-index: 0;
 }
 
 #header #hide-console {
@@ -55,6 +70,10 @@ body, html, textarea {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border: 1px solid #999;
+}
+
+#chat.disabled #thread {
+  background: #ddd;
 }
 
 #composer {
@@ -142,7 +161,6 @@ body, html, textarea {
 #roster .item {
   border-bottom: 1px solid #666;
   padding: 10px;
-  cursor: pointer;
 }
 
 #roster .item.unavailable {
@@ -156,6 +174,7 @@ body, html, textarea {
 
 #roster .item .show {
   float: right;
+  cursor: pointer;
 }
 
 .selected {
@@ -221,6 +240,21 @@ body, html, textarea {
   background: rgb(58, 58, 58);
   background:-webkit-gradient(linear,0% 0%,0% 45%,from(rgb(114, 114, 114)),to(rgb(58, 58, 58)));
   background:-moz-linear-gradient(45% 45% 90deg,rgb(58, 58, 58),rgb(114, 114, 114));
+}
+
+#logged-in-as {
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+  padding: 2px;
+  border: 2px solid transparent;
+}
+
+#logged-in-as:hover {
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border: 2px solid orange;
 }
 
 .options button, .dialog input[type="submit"], .dialog button {
@@ -345,6 +379,15 @@ button:active, input[type='submit']:active {
   border: 1px solid #999;
 }
 
+button[disabled] {
+  background: #666;
+  color: #ddd;
+}
+
+textarea[disabled] {
+  background: #ddd;
+}
+
 textarea, input {
   font-size: 14px;
   resize: none;
@@ -374,9 +417,16 @@ textarea, input {
   width: 300px;
 }
 
+#login table {
+  width: 100%;
+}
+
+#login input[type='text'], input[type='password'] {
+  width: 100%;
+}
+
 .dialog input[type='submit'] {
   float: right;
-  clear: both;
   display: block;
 }
 
@@ -392,4 +442,48 @@ textarea, input {
   color: white;
   z-index: 100;
   padding: 10px;
+}
+
+#error {
+  text-shadow: #333 1px 1px 0px;
+}
+
+a#ack {
+  float: right;
+  color: white;
+  text-decoration: none;
+}
+
+a#ack:visited {
+  color: white;
+}
+
+a#ack:hover {
+  color: #ddd;
+}
+
+input#my-status {
+  position: relative;
+  z-index: 5;
+  background: transparent;
+  color: black;
+  border-color: transparent;
+  font-size: 12px;
+}
+
+#my-status:hover, #my-status:focus {
+  font-size: 12px;
+  resize: none;
+  outline: none;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border: 1px solid #999;
+  background-color: #fff;
+}
+
+#chat-states {
+  position: absolute;
+  right: 0px;
+  opacity: 0.75;
 }
