--- a/frameworks/jsdoc-toolkit/templates/xc/static/header.html
+++ b/frameworks/jsdoc-toolkit/templates/xc/static/header.html
@@ -1,3 +1,4 @@
-<div id="header">
-  <h1>XC: XMPP Client JavaScript Library</h1>
-</div>
+<span id="header">
+  <h1>XC</h1>
+  <h4 class="caption">XMPP Client Library</h4>
+</span>
