--- a/frameworks/jsdoc-toolkit/templates/xc/static/header.html
+++ b/frameworks/jsdoc-toolkit/templates/xc/static/header.html
@@ -1,4 +1,4 @@
 <span id="header">
-  <h1>XC</h1>
-  <h4 class="caption">XMPP Client Library</h4>
+  <h1><a href="../">XC</a></h1>
+  <span class="caption">XMPP Client Library</span>
 </span>
