Removed references to 'available' presence as it is unnecessary, and masks the fact that it doesn't get sent in the XML

--- a/frameworks/jsdoc-toolkit/templates/xc/allclasses.tmpl
+++ b/frameworks/jsdoc-toolkit/templates/xc/allclasses.tmpl
@@ -17,7 +17,7 @@ function resize(e) {
     x = 400;
   }
   index.setAttribute('style', 'width: ' + x + "px");
-  content.setAttribute('style', 'left: ' + x + "px");
+  content.setAttribute('style', 'left: ' + (x + 1) + "px");
 
   e.returnValue = false;
   return false;
